# urlsplitter

./: LICENSE  README.md  pyproject.toml
urlsplitter/: __init__.py  splitter.py
