[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlsplitter"
version = "0.1.0"
description = "A simple package to split URLs into components"
authors = [{ name = "Your Name", email = "your-email@example.com" }]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = []
